--- a/pupt/package.json
+++ b/pupt/package.json
@@ -19,7 +19,7 @@
   },
   "keywords": ["cli", "prompt", "ai", "template", "handlebars"],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/your-username/prompt-tool.git"
@@ -37,8 +37,8 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^12.0.0-beta.2",
-    "@semantic-release/npm": "^13.0.0-beta.1",
+    "@semantic-release/github": "^11.0.3",
+    "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.3",
     "@types/fs-extra": "^11.0.4",
     "@types/handlebars": "^4.0.40",
@@ -51,7 +51,7 @@
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
-    "semantic-release": "^25.0.0-beta.6",
+    "semantic-release": "^24.2.7",
     "typescript": "^5.9.2",
     "vite": "^7.1.1",
     "vitest": "^3.2.4"
