ci: fix semantic release

--- a/pupt/package.json
+++ b/pupt/package.json
@@ -22,7 +22,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/prompt-tool.git"
+    "url": "https://github.com/apowers313/prompt-tool"
   },
   "publishConfig": {
     "access": "public",
