--- a/pupt/package.json
+++ b/pupt/package.json
@@ -66,17 +66,21 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@inquirer/core": "^10.1.15",
     "@inquirer/prompts": "^7.8.1",
-    "@types/ora": "^3.1.0",
+    "@inquirer/testing": "^2.1.49",
+    "@inquirer/type": "^3.0.8",
     "@types/uuid": "^10.0.0",
     "chalk": "^5.5.0",
     "commander": "^14.0.0",
     "cosmiconfig": "^9.0.0",
+    "execa": "^9.6.0",
     "fs-extra": "^11.3.1",
     "gray-matter": "^4.0.3",
     "handlebars": "^4.7.8",
+    "minimatch": "^10.0.3",
     "minisearch": "^7.1.2",
-    "ora": "^8.2.0",
+    "simple-git": "^3.28.0",
     "uuid": "^11.1.0",
     "yaml": "^2.8.1"
   }
