--- a/pupt/package.json
+++ b/pupt/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "test": "vitest",
+    "pretest": "npm run build",
+    "test": "node --expose-gc --max-old-space-size=8192 node_modules/.bin/vitest run --no-coverage",
+    "test:watch": "node --max-old-space-size=8192 node_modules/.bin/vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint src --ext .ts",
@@ -52,18 +54,19 @@
     "@types/handlebars": "^4.0.40",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.2.1",
+    "@types/pino": "^7.0.4",
     "@types/yaml": "^1.9.6",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
+    "@vitest/coverage-v8": "3.1.4",
+    "@vitest/ui": "3.1.4",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
     "semantic-release": "^24.2.7",
     "typescript": "^5.9.2",
     "vite": "^7.1.1",
-    "vitest": "^3.2.4"
+    "vitest": "3.1.4"
   },
   "dependencies": {
     "@inquirer/core": "^10.1.15",
@@ -71,6 +74,7 @@
     "@inquirer/testing": "^2.1.49",
     "@inquirer/type": "^3.0.8",
     "@types/uuid": "^10.0.0",
+    "boxen": "^8.0.1",
     "chalk": "^5.5.0",
     "commander": "^14.0.0",
     "cosmiconfig": "^9.0.0",
@@ -80,8 +84,12 @@
     "handlebars": "^4.7.8",
     "minimatch": "^10.0.3",
     "minisearch": "^7.1.2",
+    "ora": "^8.2.0",
+    "pino": "^9.9.0",
+    "pino-pretty": "^13.1.1",
     "simple-git": "^3.28.0",
     "uuid": "^11.1.0",
-    "yaml": "^2.8.1"
+    "yaml": "^2.8.1",
+    "zod": "^3.23.8"
   }
 }
