ci: fix tests, take 3

--- a/pupt/package.json
+++ b/pupt/package.json
@@ -11,8 +11,8 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "pretest": "npm run build",
-    "test": "node --expose-gc --max-old-space-size=8192 node_modules/.bin/vitest run --no-coverage",
-    "test:watch": "node --max-old-space-size=8192 node_modules/.bin/vitest",
+    "test": "vitest run --no-coverage",
+    "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint src --ext .ts",
