--- a/pupt/.github/workflows/ci.yml
+++ b/pupt/.github/workflows/ci.yml
@@ -47,9 +47,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
-          path: |
-            dist/
-            node_modules/
+          path: dist/
           retention-days: 1
 
   # Parallel test jobs that use the build artifacts
@@ -69,11 +67,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22.x
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
           name: build-artifacts
+          path: .
 
       - name: Run unit tests
         run: npm run test:ci
@@ -91,11 +94,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22.x
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
           name: build-artifacts
+          path: .
 
       - name: Run tests with coverage
         run: npm run test:coverage
