--- a/pupt/.github/workflows/ci.yml
+++ b/pupt/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
           node-version: 22.x
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --force
 
       - name: Download build artifacts
         uses: actions/download-artifact@v4
