--- a/pupt/package.json
+++ b/pupt/package.json
@@ -51,6 +51,7 @@
     "@semantic-release/github": "^11.0.3",
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.3",
+    "@types/command-exists": "^1.2.3",
     "@types/fs-extra": "^11.0.4",
     "@types/handlebars": "^4.0.40",
     "@types/js-yaml": "^4.0.9",
@@ -77,6 +78,7 @@
     "@types/uuid": "^10.0.0",
     "boxen": "^8.0.1",
     "chalk": "^5.5.0",
+    "command-exists": "^1.2.9",
     "commander": "^14.0.0",
     "cosmiconfig": "^9.0.0",
     "execa": "^9.6.0",
