ci: fix build, take 4

--- a/pupt/.pt-config.json
+++ b/pupt/.pt-config.json
@@ -7,7 +7,9 @@
   "version": "3.0.0",
   "defaultCmd": "claude",
   "defaultCmdArgs": [
-    "--permission-mode", "acceptEdits"
+    "--permission-mode",
+    "acceptEdits",
+    "--verbose"
   ],
   "defaultCmdOptions": {
     "Continue with last context?": "--continue"
