--- a/pupt/package.json
+++ b/pupt/package.json
@@ -88,10 +88,12 @@
     "handlebars": "^4.7.8",
     "minimatch": "^10.0.3",
     "minisearch": "^7.1.2",
+    "node-pty": "^1.0.0",
     "ora": "^8.2.0",
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
     "simple-git": "^3.28.0",
+    "strip-ansi": "^7.1.0",
     "uuid": "^11.1.0",
     "yaml": "^2.8.1",
     "zod": "^3.23.8"
