--- a/pupt/package.json
+++ b/pupt/package.json
@@ -88,7 +88,7 @@
     "handlebars": "^4.7.8",
     "minimatch": "^10.0.3",
     "minisearch": "^7.1.2",
-    "node-pty": "^1.0.0",
+    "@homebridge/node-pty-prebuilt-multiarch": "^0.11.14",
     "ora": "^8.2.0",
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
