fix: prompt improvements, rename labels to tags, docs improvements

--- a/pupt/.pt-config.json
+++ b/pupt/.pt-config.json
@@ -24,29 +24,7 @@
     "maxSizeMB": 50
   },
   "autoAnnotate": {
-    "enabled": false,
-    "triggers": [
-      "claude",
-      "ai",
-      "assistant"
-    ],
-    "analysisPrompt": "analyze-execution",
-    "fallbackRules": [
-      {
-        "pattern": "test.*fail|failing|failed",
-        "category": "verification_gap",
-        "severity": "high"
-      },
-      {
-        "pattern": "error:|exception:|Error:",
-        "category": "incomplete_task",
-        "severity": "medium"
-      },
-      {
-        "pattern": "stopped at|incomplete|unfinished",
-        "category": "incomplete_task",
-        "severity": "high"
-      }
-    ]
+    "enabled": true,
+    "analysisPrompt": "analyze-execution"
   }
 }
