--- a/pupt/package.json
+++ b/pupt/package.json
@@ -38,7 +38,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/apowers313/prompt-tool"
+    "url": "https://github.com/apowers313/pupt"
   },
   "publishConfig": {
     "access": "public",
