fix: update to work with claude code v2, add knip delinting

--- a/pupt/.pt-config.json
+++ b/pupt/.pt-config.json
@@ -7,9 +7,9 @@
   "version": "4.0.0",
   "defaultCmd": "claude",
   "defaultCmdArgs": [
+    "--verbose",
     "--permission-mode",
-    "acceptEdits",
-    "--verbose"
+    "acceptEdits"
   ],
   "defaultCmdOptions": {
     "Continue with last context?": "--continue"
@@ -24,7 +24,7 @@
     "maxSizeMB": 150
   },
   "autoAnnotate": {
-    "enabled": true,
+    "enabled": false,
     "analysisPrompt": "analyze-execution"
   }
 }
