--- a/pupt/package.json
+++ b/pupt/package.json
@@ -18,7 +18,9 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "lint": "eslint src --ext .ts",
+    "lint": "npm run lint:code && npm run lint:dead",
+    "lint:code": "eslint src --ext .ts",
+    "lint:dead": "knip",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "prepublishOnly": "npm run build",
     "docs:dev": "vitepress dev docs",
@@ -59,21 +61,18 @@
     "@semantic-release/release-notes-generator": "^14.0.3",
     "@types/command-exists": "^1.2.3",
     "@types/fs-extra": "^11.0.4",
-    "@types/handlebars": "^4.0.40",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.2.1",
-    "@types/pino": "^7.0.4",
-    "@types/yaml": "^1.9.6",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
     "@vitest/coverage-v8": "3.1.4",
     "@vitest/ui": "3.1.4",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
+    "knip": "^5.63.0",
     "prettier": "^3.6.2",
     "semantic-release": "^24.2.7",
     "typescript": "^5.9.2",
-    "vite": "^7.1.1",
     "vitepress": "^1.6.4",
     "vitest": "3.1.4"
   },
@@ -91,6 +90,7 @@
     "cosmiconfig": "^9.0.0",
     "execa": "^9.6.0",
     "fs-extra": "^11.3.1",
+    "glob": "^11.0.3",
     "gray-matter": "^4.0.3",
     "handlebars": "^4.7.8",
     "minimatch": "^10.0.3",
