--- a/pupt/.github/workflows/ci.yml
+++ b/pupt/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        env:
+          HUSKY: 0
 
       - name: Run linter
         run: npm run lint
@@ -57,6 +59,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        env:
+          HUSKY: 0
 
       - name: Build project
         run: npm run build
@@ -81,6 +85,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+        env:
+          HUSKY: 0
 
       - name: Build project
         run: npm run build
@@ -113,7 +119,9 @@ jobs:
         
       - name: Install dependencies
         run: npm ci
-        
+        env:
+          HUSKY: 0
+
       - name: Build documentation
         run: npm run docs:build
         
@@ -157,10 +165,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22.x
-          registry-url: 'https://registry.npmjs.org'
+
+      - name: Upgrade npm for trusted publishing
+        run: npm install -g npm@latest
 
       - name: Install dependencies
         run: npm ci
+        env:
+          HUSKY: 0
 
       - name: Build project
         run: npm run build
@@ -168,6 +180,4 @@ jobs:
       - name: Run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
