--- a/pupt/.github/workflows/pr.yml
+++ b/pupt/.github/workflows/pr.yml
@@ -36,6 +36,8 @@ jobs:
       - name: Install dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm ci
+        env:
+          HUSKY: 0
 
       - name: Run linter
         run: npm run lint
