--- a/pupt/.releaserc.json
+++ b/pupt/.releaserc.json
@@ -1,5 +1,8 @@
 {
-  "branches": ["main", "master"],
+  "branches": [
+    "master",
+    "main"
+  ],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
@@ -7,23 +10,20 @@
     [
       "@semantic-release/npm",
       {
-        "npmPublish": true,
-        "pkgRoot": ".",
-        "tarballDir": "dist"
-      }
-    ],
-    [
-      "@semantic-release/github",
-      {
-        "assets": ["dist/*.tgz"]
+        "npmPublish": true
       }
     ],
     [
       "@semantic-release/git",
       {
-        "assets": ["package.json", "package-lock.json", "CHANGELOG.md"],
+        "assets": [
+          "package.json",
+          "package-lock.json",
+          "CHANGELOG.md"
+        ],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
-    ]
+    ],
+    "@semantic-release/github"
   ]
 }
