--- a/pupt/package.json
+++ b/pupt/package.json
@@ -23,6 +23,8 @@
     "lint:dead": "knip",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "prepublishOnly": "npm run build",
+    "prepare": "husky",
+    "commit": "cz",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "npm run docs:build && vitepress preview docs --port 9010"
@@ -46,6 +48,11 @@
     "access": "public",
     "provenance": true
   },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
   "files": [
     "dist",
     "prompts",
@@ -53,11 +60,13 @@
     "LICENSE"
   ],
   "devDependencies": {
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.3",
-    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/npm": "^13.1.3",
     "@semantic-release/release-notes-generator": "^14.0.3",
     "@types/command-exists": "^1.2.3",
     "@types/fs-extra": "^11.0.4",
@@ -67,11 +76,15 @@
     "@typescript-eslint/parser": "^8.39.1",
     "@vitest/coverage-v8": "3.1.4",
     "@vitest/ui": "3.1.4",
+    "commitizen": "^4.3.1",
+    "conventional-changelog-conventionalcommits": "^9.1.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
+    "husky": "^9.1.7",
     "knip": "^5.63.0",
     "prettier": "^3.6.2",
-    "semantic-release": "^24.2.7",
+    "semantic-release": "^25.0.2",
     "typescript": "^5.9.2",
     "vitepress": "^1.6.4",
     "vitest": "3.1.4"
