--- a/pupt-lib/package.json
+++ b/pupt-lib/package.json
@@ -6,12 +6,33 @@
   "author": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/apowers313/pupt-lib.git"
+    "url": "git+https://github.com/apowers313/pupt-lib.git"
   },
   "bugs": {
     "url": "https://github.com/apowers313/pupt-lib/issues"
   },
   "homepage": "https://github.com/apowers313/pupt-lib#readme",
+  "keywords": [
+    "ai",
+    "prompt",
+    "jsx",
+    "llm",
+    "typescript",
+    "template",
+    "prompt-engineering"
+  ],
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "files": [
+    "dist/",
+    "README.md",
+    "LICENSE"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
+  },
   "type": "module",
   "exports": {
     ".": {
