--- a/pupt-react/package.json
+++ b/pupt-react/package.json
@@ -53,6 +53,12 @@
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@eslint/js": "^9.39.2",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.3",
+    "@semantic-release/npm": "^13.1.0",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "@mantine/core": "^8.3.13",
     "@mantine/hooks": "^8.3.13",
     "@monaco-editor/react": "^4.7.0",
@@ -66,6 +72,7 @@
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/browser": "^3.0.4",
     "@vitest/coverage-v8": "^3.0.4",
     "commitizen": "^4.3.1",
     "conventional-changelog-conventionalcommits": "^9.1.0",
@@ -74,11 +81,12 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "husky": "^9.1.7",
-    "jsdom": "^26.0.0",
     "knip": "^5.43.3",
+    "playwright": "^1.50.0",
     "pupt": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "semantic-release": "^25.0.0",
     "servherd": "^1.1.1",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.54.0",
