--- a/pupt-react/.github/workflows/ci.yml
+++ b/pupt-react/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI
 
 on:
   push:
@@ -12,32 +12,20 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # Lint job runs first
   lint:
     name: Lint
     runs-on: ubuntu-latest
+    env:
+      HUSKY: 0
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22.x
           cache: 'npm'
+      - run: npm ci
+      - run: npm run lint
 
-      - name: Install dependencies
-        run: npm ci
-        env:
-          HUSKY: 0
-
-      - name: Run linter
-        run: npm run lint
-
-      - name: Run TypeScript check
-        run: npm run typecheck
-
-  # Test job runs on multiple Node versions
   test:
     name: Test (Node ${{ matrix.node }})
     runs-on: ubuntu-latest
@@ -46,88 +34,63 @@ jobs:
       fail-fast: false
       matrix:
         node: [20, 22]
-
+    env:
+      HUSKY: 0
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
           cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-        env:
-          HUSKY: 0
-
+      - run: npm ci
       - name: Cache Playwright browsers
         uses: actions/cache@v4
         id: playwright-cache
         with:
           path: ~/.cache/ms-playwright
           key: playwright-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
-
       - name: Install Playwright browsers
         if: steps.playwright-cache.outputs.cache-hit != 'true'
         run: npx playwright install chromium --with-deps
-
       - name: Install Playwright deps (if cached)
         if: steps.playwright-cache.outputs.cache-hit == 'true'
         run: npx playwright install-deps chromium
+      - run: npm run build
+      - run: npm test
 
-      - name: Build
-        run: npm run build
-
-      - name: Run tests
-        run: npm test
-
-  # Coverage job runs separately on Node 22
   coverage:
     name: Coverage
     runs-on: ubuntu-latest
     needs: [lint, test]
+    env:
+      HUSKY: 0
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22.x
           cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-        env:
-          HUSKY: 0
-
+      - run: npm ci
       - name: Cache Playwright browsers
         uses: actions/cache@v4
         id: playwright-cache
         with:
           path: ~/.cache/ms-playwright
           key: playwright-${{ runner.os }}-${{ hashFiles('package-lock.json') }}
-
       - name: Install Playwright browsers
         if: steps.playwright-cache.outputs.cache-hit != 'true'
         run: npx playwright install chromium --with-deps
-
       - name: Install Playwright deps (if cached)
         if: steps.playwright-cache.outputs.cache-hit == 'true'
         run: npx playwright install-deps chromium
-
-      - name: Run tests with coverage
-        run: npm run test:coverage
-
-      - name: Upload coverage reports
-        uses: actions/upload-artifact@v4
+      - run: npm run build
+      - run: npm run test:coverage
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
         with:
-          name: coverage
-          path: coverage/
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: ./coverage/lcov.info
 
-  # Semantic release job
   release:
     name: Release
     runs-on: ubuntu-latest
@@ -138,30 +101,19 @@ jobs:
       issues: write
       pull-requests: write
       id-token: write
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           persist-credentials: false
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 22.x
-
-      - name: Upgrade npm for trusted publishing
-        run: npm install -g npm@latest
-
-      - name: Install dependencies
-        run: npm ci
+      - run: npm install -g npm@latest
+      - run: npm ci
         env:
           HUSKY: 0
-
-      - name: Build
-        run: npm run build
-
+      - run: npm run build
       - name: Run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
