--- a/pupt-lib/package.json
+++ b/pupt-lib/package.json
@@ -70,12 +70,10 @@
     }
   },
   "dependencies": {
-    "@babel/standalone": "^7.28.6",
-    "hyperformula": "^3.1.1",
-    "minisearch": "^7.2.0",
-    "zod": "^3.22.0"
+    "hyperformula": "^3.1.1"
   },
   "devDependencies": {
+    "@babel/standalone": "^7.28.6",
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@eslint/js": "^9.19.0",
@@ -99,6 +97,7 @@
     "eslint": "^9.19.0",
     "husky": "^9.1.7",
     "knip": "^5.44.1",
+    "minisearch": "^7.2.0",
     "msw": "^2.12.7",
     "playwright": "^1.50.0",
     "pupt": "^1.4.1",
@@ -108,6 +107,7 @@
     "typescript-eslint": "^8.22.0",
     "vite": "^6.0.11",
     "vite-plugin-dts": "^4.5.0",
-    "vitest": "^3.0.4"
+    "vitest": "^3.0.4",
+    "zod": "^3.22.0"
   }
 }
