fix: trusted publishing

--- a/pupt-react/package.json
+++ b/pupt-react/package.json
@@ -4,6 +4,14 @@
   "description": "Headless React component library for pupt-lib integration",
   "license": "MIT",
   "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/apowers313/pupt-react"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
+  },
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
