--- a/pupt-lib/package.json
+++ b/pupt-lib/package.json
@@ -37,15 +37,18 @@
   "exports": {
     ".": {
       "types": "./dist/src/index.d.ts",
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
     },
     "./jsx-runtime": {
       "types": "./dist/src/jsx-runtime/index.d.ts",
-      "import": "./dist/jsx-runtime/index.js"
+      "import": "./dist/jsx-runtime/index.js",
+      "default": "./dist/jsx-runtime/index.js"
     },
     "./jsx-dev-runtime": {
       "types": "./dist/src/jsx-runtime/jsx-dev-runtime.d.ts",
-      "import": "./dist/jsx-runtime/jsx-dev-runtime.js"
+      "import": "./dist/jsx-runtime/jsx-dev-runtime.js",
+      "default": "./dist/jsx-runtime/jsx-dev-runtime.js"
     }
   },
   "scripts": {
