ci: temporarily disable auto-release trigger for recovery

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,13 @@
 name: Release
 
 on:
-    workflow_run:
-        workflows: ["CI"]
-        types:
-            - completed
-        branches:
-            - master
+    # workflow_run trigger temporarily disabled for release recovery
+    # workflow_run:
+    #     workflows: ["CI"]
+    #     types:
+    #         - completed
+    #     branches:
+    #         - master
     workflow_dispatch:
         inputs:
             publish-only:
