ci: ignore minimatch cve

--- a/package.json
+++ b/package.json
@@ -28,6 +28,13 @@
             "path": "cz-conventional-changelog"
         }
     },
+    "pnpm": {
+        "auditConfig": {
+            "ignoreCves": [
+                "CVE-2026-26996"
+            ]
+        }
+    },
     "devDependencies": {
         "@commitlint/cli": "^19.8.1",
         "@commitlint/config-conventional": "^19.8.1",
