--- a/pupt-sde-prompts/package.json
+++ b/pupt-sde-prompts/package.json
@@ -28,5 +28,8 @@
     ],
     "peerDependencies": {
         "@pupt/lib": "^1.3.5"
+    },
+    "devDependencies": {
+        "@pupt/test": "workspace:*"
     }
 }
